2008-11-05  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-quit): Use `window-full-width-p' to check
	window width.

2008-11-05  Chong Yidong  <cyd@stupidchicken.com>

	* server.el (server-process-filter): Only default to emacsclient's
	terminal in daemon mode.

2008-11-05  Martin Rudalics  <rudalics@gmx.at>

	* window.el (quit-window): Restore prefix argument behavior
	removed in 2008-10-30 change.  (Bug#1308)

2008-11-05  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-mode): Bugfix: Add conversion killing
	function to kill-buffer-hook, not to kill-buffer.
	Reported by Markus Triska <markus.triska@gmx.at>

2008-11-04  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-quit): Make sure that the keypad buffer
	exists before deleting its windows.

2008-11-04  Chong Yidong  <cyd@stupidchicken.com>

	* server.el (server-process-filter): Don't call
	server-create-tty-frame when no tty name is specified.

2008-11-04  Christian Faulhammer  <opfer@gentoo.org>  (tiny change)

	* vc-bzr.el (vc-bzr-dir-extra-headers): New function.

2008-11-04  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-cmds.el (toggle-enable-multibyte-characters)
	(define-char-code-property):
	* textmodes/reftex.el (reftex-index):
	* textmodes/reftex-index.el (reftex-index): Fix typos in docstrings.

2008-11-04  Chong Yidong  <cyd@stupidchicken.com>

	* vc-bzr.el (vc-bzr-dir-printer): Rename from
	vc-bzr-status-printer.

	* startup.el (startup-echo-area-message): Display a different
	message in daemon mode.  Suggested by Stephen Turnbull.

	* frame.el (make-frame-on-display): Ignore DISPLAY argument on
	Windows.

2008-11-04  Juanma Barranquero  <lekktu@gmail.com>

	* dframe.el (dframe-mouse-position-function)
	(dframe-reposition-frame-emacs, dframe-pass-event-to-popup-mode-menu)
	(dframe-mouse-set-point): Fix typos in docstrings.

2008-11-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dir.el (vc-dir-headers): Undo previous change.
